# sdaf-gh-actions

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sdaf_github_actions.py
core/: azure_manager.py  config_manager.py  github_manager.py  workflow_manager.py
ui/: tui.py  validators.py
utils/: __init__.py  logging_utils.py
